About: attempt fix image stretch in prod

--- a/src/about-us.scss
+++ b/src/about-us.scss
@@ -74,6 +74,7 @@ main > .cta {
     border-style: solid;
     box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.1);
     max-width: 100%;
+    height: auto;
   }
   @media screen and (min-width: 800px) {
     display: grid;
